# semanticnn

./: README.md  SYSTEM_SPEC.md  pyproject.toml
semanticnn/: __init__.py  certificates.py  cli.py  ibp.py  invariants.py  onnx_ir.py  regions.py  verification.py
tests/: test_core.py  test_verify.py
